--- a/example.env
+++ b/example.env
@@ -1,5 +1,18 @@
-URL=localhost:5000
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+# Application Configuration
+URL=URL
+FLASK_ENV=DEV/PROD
+
+# MySQL/MariaDB Configuration for Docker
+MYSQL_HOST=HOST
+MYSQL_USER=USER
+MYSQL_PASSWORD=PASSWORD
+MYSQL_DATABASE=DATABASE
+
+# MariaDB Container Environment Variables
+MARIADB_ROOT_PASSWORD=ROOT_PASSWORD
+MARIADB_DATABASE=DATABASE
+MARIADB_USER=USER
+MARIADB_PASSWORD=PASSWORD
+
+# Optional: Database URL
+DATABASE_URL=DB_URL
